fix display of linebreaks in lead text. fix font in support sectoin

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -127,13 +127,9 @@ html {
     }
     .tagline {
       width: 80%;
-      font-size: 1.7vw;
+      font-size: 2.6vw;
       font-weight: 400;
       text-shadow: 0px 0px 16px #999;
-
-      br {
-        display: none;
-      }
     }
   }
 }
@@ -392,7 +388,7 @@ html {
 
   .content {
     margin-top: 15px;
-    font-size: 0.8rem;
+    font-size: 0.7rem;
     line-height: 1.5rem;
   }
   
@@ -519,6 +515,10 @@ html {
 @media (min-width: 768px) {
   .home {
     letter-spacing: 1px;
+  }
+
+  .marquee > div .tagline {
+    font-size: 1.7vw;
   }
 
   .lead-bar {
